@@ -46,6 +46,9 @@ import java.util.Optional;
 import java.util.concurrent.ConcurrentLinkedQueue;
 import java.util.spi.ToolProvider;
 
+import static com.io7m.montarre.api.io.MPackageReaderType.PlatformDependentModulePolicy.IGNORE;
+import static com.io7m.montarre.api.io.MPackageReaderType.PlatformDependentModulePolicy.MERGE;
+
 /**
  * A native packager that produces Debian packages.
  */
@@ -161,7 +164,15 @@ public final class MNPackagerDeb
           .get();
 
       LOG.info("Unpacking application to {}.", appDirectory);
-      packageV.unpackInto(appDirectory);
+      packageV.unpackInto(
+        appDirectory,
+        module -> {
+          if (workspace.matchesModule(module)) {
+            return MERGE;
+          } else {
+            return IGNORE;
+          }
+        });
 
       final var iconFile =
         this.unpackIcon(workspace, packageV, directory);
@@ -227,6 +238,20 @@ public final class MNPackagerDeb
     arguments.add("--linux-package-name");
     arguments.add(metadata.names().shortName().name());
 
+    for (final var extraOption : metadata.javaInfo().extraOptions()) {
+      arguments.add("--java-options");
+      arguments.add(extraOption);
+    }
+
+    final var nativeAccessModules = metadata.javaInfo().nativeAccessModules();
+    if (!nativeAccessModules.isEmpty()) {
+      arguments.add("--java-options");
+      arguments.add(
+        "--enable-native-access=%s".formatted(
+          String.join(",", nativeAccessModules))
+      );
+    }
+
     arguments.add("--about-url");
     arguments.add(
       metadata.links()
@@ -268,7 +293,7 @@ public final class MNPackagerDeb
     final Path buildDirectory)
     throws IOException
   {
-    try (var stream = Files.list(buildDirectory)) {
+    try (final var stream = Files.list(buildDirectory)) {
       final var fileList =
         stream.filter(n -> n.getFileName().toString().endsWith(".deb"))
           .toList();
